Name:                reactive-bacon
Version:             0.4.1
Stability:           experimental
Synopsis:            FRP (functional reactive programming) framework
Description:         FRP (functional reactive programming) framework inspired by RX, reactive-banana and Iteratee
License:             BSD3
License-file:        LICENSE
Author:              Juha Paananen
Maintainer:          juha.paananen@gmail.com
Homepage:            http://github.com/raimohanska/reactive-bacon
Bug-reports:         http://github.com/raimohanska/reactive-bacon/issues
Category:            FRP
Build-type:          Simple
Cabal-version:       >=1.10


Library
  hs-source-dirs: src
  Exposed-modules: Reactive.Bacon,
                   Reactive.Bacon.Core,
                   Reactive.Bacon.EventStream,
                   Reactive.Bacon.EventStream.Combinators,
                   Reactive.Bacon.EventStream.IO,
                   Reactive.Bacon.EventStream.Monadic,
                   Reactive.Bacon.EventStream.Timed,
                   Reactive.Bacon.PushStream,
                   Reactive.Bacon.Property
  Build-depends:
    base >= 4 && < 5,
    stm >= 2.2.0.1,
    old-time >= 1.0.0.6
  default-language: Haskell2010

Test-Suite tests
  hs-source-dirs: src, test
  Type:           exitcode-stdio-1.0
  Main-is:        Specs.hs
  Build-depends:  
    base >= 4 && < 5,
    old-time >= 1.0.0.6,
    stm >= 2.2.0.1,
    HUnit >= 1.2.2.3, 
    containers >= 0.4.0.0 
  ghc-options:    -threaded
  default-language: Haskell2010

source-repository head
  type: Git
  location: https://github.com/raimohanska/reactive-bacon
